--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,14 @@
 venv/
 __pycache__/
 *.pyc
-.env
-.env.*
 
-# Node
-node_modules/
+# SQLite test DB
+test_db.sqlite3
 
-# OS
-.DS_Store
-Thumbs.db
+# Node / React
+frontend/node_modules/
+frontend/build/
 
-# Editors
+# VSCode / IDE
 .vscode/
 .idea/
