--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
